--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,6 +6,8 @@
     "dev": "next dev",
     "dev:babel": "$env:NEXT_DISABLE_SWC='true'; next dev",
     "build": "next build",
+    "build:static": "cross-env GITHUB_PAGES=true next build",
+    "build:static:win": "$env:GITHUB_PAGES='true'; next build",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "node scripts/copy-packages.js",
@@ -38,6 +40,7 @@
     "@types/uuid": "^9.0.0",
     "autoprefixer": "^10.4.0",
     "babel-loader": "^10.0.0",
+    "cross-env": "^10.1.0",
     "playwright": "^1.56.1",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
